Arrumando títulos das etapas

--- a/preditiva_genero.ipynb
+++ b/preditiva_genero.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
     }
    ],
    "source": [
-    "# (ideia) apagar do df as músicas que foram puladas\n",
+    "# (ideia) apagar do df as músicas que foram puladas e estavam no modo aleatório\n",
     "df_genre.drop(\n",
     "    df_genre[(df_genre['shuffle'] == True) & (df_genre['skipped'] == True)].index, \n",
     "    inplace=True)\n",
@@ -1557,7 +1557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Resultado do Modelo"
+    "### Resultado do Modelo (Previsão)"
    ]
   },
   {
