--- a/preditiva_genero.ipynb
+++ b/preditiva_genero.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <center> Análise Preditiva: gênero\n",
+    "### <center> **Análise Preditiva:** gênero\n",
     "\n",
     "**Objetivo:** Preve o gênero que será mais ouvido ao final do ano baseado no histórico do usuário"
    ]
