Modificando a regra de negócio

--- a/preditiva_musica.ipynb
+++ b/preditiva_musica.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -455,9 +455,7 @@
     "df_music = df[['ts', 'ms_played', 'master_metadata_track_name', 'master_metadata_album_artist_name', 'shuffle', 'skipped']].copy()\n",
     "\n",
     "# apagando do df as músicas que foram puladas e estavam no modo aleatório\n",
-    "df_music.drop(\n",
-    "    df_music[(df_music['shuffle'] == True) & (df_music['skipped'] == True)].index, \n",
-    "    inplace=True)\n",
+    "df_music = df_music[~((df_music['shuffle'] == True) & (df_music['skipped'] == True))]\n",
     "\n",
     "# Convertendo para timestamp\n",
     "df_music['ts'] = pd.to_datetime(df['ts'])\n",
