alterando nome de variável

--- a/preditiva_musica.ipynb
+++ b/preditiva_musica.ipynb
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -833,8 +833,8 @@
     "\n",
     "ax.plot(df_v['mes_ord'], df_v['min_played'], 'o-', label='Histórico real', color='#7DACFF', zorder=3)\n",
     "ax.plot(x_range, y_trend, '--', label='Tendência linear', color='gray', alpha=0.6)\n",
-    "ax.scatter([proximo_mes_ord], [minutos_vencedor], color='#FF6B6B', zorder=5, s=120,\n",
-    "           label=f'Previsão {proximo_mes_label}: {minutos_vencedor:.1f} min')\n",
+    "ax.scatter([proximo_mes_ord], [minutos], color='#FF6B6B', zorder=5, s=120,\n",
+    "           label=f'Previsão {proximo_mes_label}: {minutos:.1f} min')\n",
     "\n",
     "# Eixo x com meses reais\n",
     "ax.set_xticks(x_ords)\n",
@@ -843,7 +843,7 @@
     "# Linha pontilhada vertical destacando o ponto de previsão\n",
     "ax.axvline(proximo_mes_ord, color='#FF6B6B', linestyle=':', alpha=0.4)\n",
     "\n",
-    "ax.set_title(f'Tendência: \"{musica_vencedora}\" — {artista_vencedor}', fontsize=13)\n",
+    "ax.set_title(f'Tendência: \"{musica}\" — {artista}', fontsize=13)\n",
     "ax.set_xlabel('Mês')\n",
     "ax.set_ylabel('Minutos ouvidos')\n",
     "ax.legend()\n",
