--- a/preditiva_genero.ipynb
+++ b/preditiva_genero.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,10 @@
        "      <th>master_metadata_album_album_name</th>\n",
        "      <th>spotify_track_uri</th>\n",
        "      <th>episode_name</th>\n",
-       "      <th>...</th>\n",
+       "      <th>episode_show_name</th>\n",
+       "      <th>spotify_episode_uri</th>\n",
+       "      <th>audiobook_title</th>\n",
+       "      <th>audiobook_uri</th>\n",
        "      <th>audiobook_chapter_uri</th>\n",
        "      <th>audiobook_chapter_title</th>\n",
        "      <th>reason_start</th>\n",
@@ -152,7 +155,10 @@
        "      <td>BETWEEN 1&amp;2</td>\n",
        "      <td>spotify:track:0RDqNCRBGrSegk16Avfzuq</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>playbtn</td>\n",
@@ -176,7 +182,10 @@
        "      <td>Illuminate</td>\n",
        "      <td>spotify:track:7JJmb5XwzOO8jgpou264Ml</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>playbtn</td>\n",
@@ -200,7 +209,10 @@
        "      <td>Planet Her</td>\n",
        "      <td>spotify:track:6Uj1ctrBOjOas8xZXGqKk4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>playbtn</td>\n",
@@ -224,7 +236,10 @@
        "      <td>ME</td>\n",
        "      <td>spotify:track:69CrOS7vEHIrhC2ILyEi0s</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>clickrow</td>\n",
@@ -248,7 +263,10 @@
        "      <td>ME</td>\n",
        "      <td>spotify:track:69CrOS7vEHIrhC2ILyEi0s</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>appload</td>\n",
@@ -262,7 +280,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -287,31 +304,36 @@
        "3                               ME  spotify:track:69CrOS7vEHIrhC2ILyEi0s   \n",
        "4                               ME  spotify:track:69CrOS7vEHIrhC2ILyEi0s   \n",
        "\n",
-       "   episode_name  ...  audiobook_chapter_uri  audiobook_chapter_title  \\\n",
-       "0           NaN  ...                    NaN                      NaN   \n",
-       "1           NaN  ...                    NaN                      NaN   \n",
-       "2           NaN  ...                    NaN                      NaN   \n",
-       "3           NaN  ...                    NaN                      NaN   \n",
-       "4           NaN  ...                    NaN                      NaN   \n",
+       "   episode_name  episode_show_name  spotify_episode_uri  audiobook_title  \\\n",
+       "0           NaN                NaN                  NaN              NaN   \n",
+       "1           NaN                NaN                  NaN              NaN   \n",
+       "2           NaN                NaN                  NaN              NaN   \n",
+       "3           NaN                NaN                  NaN              NaN   \n",
+       "4           NaN                NaN                  NaN              NaN   \n",
        "\n",
-       "   reason_start  reason_end  shuffle  skipped offline offline_timestamp  \\\n",
-       "0       playbtn     endplay    False     True   False        1680632717   \n",
-       "1       playbtn     endplay    False     True   False        1680632730   \n",
-       "2       playbtn     endplay    False     True   False        1680632747   \n",
-       "3      clickrow      logout    False    False   False        1680635513   \n",
-       "4       appload      logout    False    False   False        1680647986   \n",
+       "   audiobook_uri  audiobook_chapter_uri  audiobook_chapter_title reason_start  \\\n",
+       "0            NaN                    NaN                      NaN      playbtn   \n",
+       "1            NaN                    NaN                      NaN      playbtn   \n",
+       "2            NaN                    NaN                      NaN      playbtn   \n",
+       "3            NaN                    NaN                      NaN     clickrow   \n",
+       "4            NaN                    NaN                      NaN      appload   \n",
        "\n",
-       "   incognito_mode  genero  \n",
-       "0           False   k-pop  \n",
-       "1           False     pop  \n",
-       "2           False     pop  \n",
-       "3           False   k-pop  \n",
-       "4           False   k-pop  \n",
+       "  reason_end  shuffle  skipped  offline  offline_timestamp  incognito_mode  \\\n",
+       "0    endplay    False     True    False         1680632717           False   \n",
+       "1    endplay    False     True    False         1680632730           False   \n",
+       "2    endplay    False     True    False         1680632747           False   \n",
+       "3     logout    False    False    False         1680635513           False   \n",
+       "4     logout    False    False    False         1680647986           False   \n",
        "\n",
-       "[5 rows x 24 columns]"
+       "  genero  \n",
+       "0  k-pop  \n",
+       "1    pop  \n",
+       "2    pop  \n",
+       "3  k-pop  \n",
+       "4  k-pop  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
