--- a/preditiva_genero.ipynb
+++ b/preditiva_genero.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "### <center> **Análise Preditiva:** gênero\n",
     "\n",
-    "**Objetivo:** Preve o gênero que será mais ouvido ao final do ano baseado no histórico do usuário"
+    "**Objetivo:** Prever o gênero que será mais ouvido no próximo mês baseado no histórico do usuário"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,6 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings"
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +332,7 @@
        "4  k-pop  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +589,7 @@
     "      .reset_index()\n",
     ")\n",
     "\n",
-    "# Convertendo mes para datetime (para facilitar)\n",
+    "# Convertendo mes para timestamp (para facilitar)\n",
     "df_month['mes'] = df_month['mes'].dt.to_timestamp()\n",
     "df_month = df_month.sort_values('mes')\n",
     "\n",
@@ -627,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +659,7 @@
     "    X_test = test[['mes_ord']]\n",
     "    y_test = test['total_min']\n",
     "\n",
-    "    # Modelo de regressão linear simples\n",
+    "    # Modelo de regressão linear\n",
     "    model = LinearRegression()\n",
     "    model.fit(X_train, y_train)\n",
     "\n",
@@ -684,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
