--- a/preditiva_musica.ipynb
+++ b/preditiva_musica.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Objetivo:** Prever a música que será a mais escutada ao final do ano. Retornar também as top 5 músicas."
+    "**Objetivo:** Prever a música que será a mais escutada no próximo mês. Retornar também as top 5 músicas."
    ]
   },
   {
