alterando filtro de musicas

--- a/preditiva_retrospectiva.ipynb
+++ b/preditiva_retrospectiva.ipynb
@@ -32,7 +32,7 @@
     "# Criar identificador de Ano-Mês\n",
     "df['ano_mes'] = df['ts'].dt.to_period('M')\n",
     "\n",
-    "df = df[(df['skipped'] == False) | (df['shuffle'] == False)]  \n",
+    "df = df[(df['skipped'] == False)]  \n",
     "\n",
     "# Agrupar por música e mês para facilitar o treino\n",
     "df_grouped = df.groupby(['master_metadata_track_name', 'master_metadata_album_artist_name', 'ano_mes'])['min_played'].sum().reset_index()\n",
